--- a/index.html
+++ b/index.html
@@ -39,5 +39,5 @@
     </div>
   </body>
   <script src="int.min.js"></script>
-  <script src="app.js"></script>
+  <script src="app.min.js"></script>
 </html>
